--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,11 @@
 .App {
   scroll-snap-type: both mandatory;
   overflow: auto;
+  overflow-x: hidden;
   height: 100vh;
+  width: 100%;
   scrollbar-width: none;
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -35,7 +38,6 @@
   text-decoration: none;
   color: black;
   letter-spacing: 2px;
-  font-family: 'Roboto', sans-serif;
 }
 
 #banner:hover {
@@ -50,8 +52,13 @@
   background-color: #D5FFD9;
 }
 
+#section3 {
+  background-color: #BEEDAA;
+}
+
 .mainContent {
   height: 100%;
+  box-sizing: border-box;
 }
 
 .heading {
@@ -59,10 +66,10 @@
   display: flex;
   text-align: center;
   letter-spacing: 10px;
-  font-size: 50px;
   flex-direction: column;
   justify-content: center;
   position: relative;
+  font-size: 3vw;
 }
 
 .heading > h1 {
@@ -116,7 +123,6 @@ body {
   padding: 5px 10px 5px 10px;
   transition: 0.2s linear all;
   letter-spacing: 5px;
-  font-family: 'Roboto', sans-serif;
 }
 
 .navbar>a:hover {
@@ -126,3 +132,63 @@ body {
 .warning {
   font-size: 80px;
 }
+
+.mainContent.html-content, .mainContent.css-content{
+  display: flex;
+  flex-direction: column;
+}
+
+.heading.html-heading, .heading.css-heading {
+  justify-content: start;
+  flex-grow: 0;
+  flex-basis: auto;
+  height: auto;
+}
+
+#HTMLProj, #CSSProj {
+  padding-left: 30px;
+  padding-top: 30px;
+  letter-spacing: 5px;
+  margin: 0px;
+  position: static;
+  transform: none;
+  text-align: start;
+  max-width: 0;
+  overflow: hidden;
+  transition: max-width 3s;
+  white-space: nowrap;
+}
+
+#HTMLProj.entrance, #CSSProj.entrance {
+  max-width: 100%;
+}
+
+#welcome-heading {
+  max-width: 0%;
+  transition: max-width 3s;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#welcome-heading.entrance {
+  max-width: 100%;
+}
+
+.card-display {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 40%;
+  justify-content: center;
+  gap: 10px;
+}
+
